# rust-tracing

./: .gitignore  Cargo.toml  README.md
axum-api/: Cargo.toml
axum-api/src/: main.rs  middlewares.rs  routes.rs
axum-downstream-api/: Cargo.toml
axum-downstream-api/src/: main.rs  routes.rs
cli-client/: Cargo.toml
cli-client/src/: http_client.rs  main.rs
dotnet-api/: DotnetApi.csproj  DotnetApi.http  Program.cs
dotnet-api/Properties/: launchSettings.json
nextjs-frontend/: package.json  tsconfig.json
nextjs-frontend/src/: instrumentation.node.ts
nextjs-frontend/src/app/: page.tsx
nextjs-frontend/src/app/axum/downstream-status/: page.tsx
nextjs-frontend/src/app/dotnet/downstream-status/: page.tsx
nextjs-frontend/src/app/downstream-status/: page.tsx
nextjs-frontend/src/app/greeting/[firstname]/[lastname/: page.tsx
nextjs-frontend/src/app/weatherforecast/: page.tsx
shared/: Cargo.toml
shared/src/: lib.rs  middlewares.rs  traceable_http_client.rs  tracer.rs
