[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
opentelemetry = "0.22.0"
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
tokio = { version = "1.36.0", features = ["full"] }
